--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,6 +1,13 @@
-.bg{
-    background-image: url(../images/bg.jpeg);
-    width: 100%;
-    height: 100%;
-    background-size: cover;
+.text{
+    text-align: center;
+    position:relative ;
+    margin-top: auto;
+    padding-top: 50px;
+    
+}
+ol{
+    text-align: center;
+    align-items: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 100%;
 }
