--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,7 +1,8 @@
 .nav{
+    position: relative;
     width: 100%;
     height: 100%;
-    background: #ffbf00;
+
     border-bottom: 10px ;
     display: flex;
     align-items: right;
@@ -31,6 +32,7 @@
     background: linear-gradient(180deg, #FFD243 0%, #FFB726 0.01%, #FF9D0A 100%);
 }
 .logo{
+    position: relative;
     text-decoration: none;
     display: flex;
     margin-left: 100px;
@@ -40,6 +42,7 @@
     
 }
 .mainlogo{
+    position: relative;
     display: flex;
     width: 3%;
     margin-left: 40px;
