--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -11,3 +11,14 @@ ol{
     font-family: 'Times New Roman', Times, serif;
     font-size: 100%;
 }
+.heading{
+    text-align: center;
+    padding-top: 5%;
+}
+h3{
+    text-align: center;
+    color: aliceblue;
+}
+span{
+    color: rgb(158, 116, 37);
+}
