--- a/src/HomePage/RecommendedSection/Recmd.module.css
+++ b/src/HomePage/RecommendedSection/Recmd.module.css
@@ -1,85 +1,88 @@
-.RecommendedSection{
+.mainsection{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    position: relative , fixed;
-}
-.roll{
-    margin-bottom: -4px;
-    margin-top: 0px;
-    width: 10vh;
-    margin-left: 145vh;
-}
-.leaf{
-    width: 22vh;
-    margin-left: 46vh;
-    margin-top: -10vh;
-    margin-bottom: -3vh;
-}
-.maintext{
-    text-align: center;
-    font-size: 36px;
-    margin-top: -10vh;
-    margin-left: 2vh;
-    font-family: Arial, Helvetica, sans-serif;
-    text-justify: left;
-    color: black;
-}
-.ul{
-    text-align: center;
-    padding: 1vh 10vh 3vh 10vh;
 }
 
-body {
-    background-color:  linear-gradient(180deg, #F7C115 0%, #EA5F00 139.34%);
+.secondsection {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.glasstemp{
+    width: 80%;
+    height: 80%;
+    background: radial-gradient(100.28% 276.92% at 3.06% 7.15%, rgba(115, 113, 113, 0.42) 0%, rgba(217, 217, 217, 0.42) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    backdrop-filter: blur(35px);
+    border-radius: 30px;
+}
 .heading{
-    font-size:20px;
-    font-weight:600;
-    color:  linear-gradient(180deg, #F7C115 0%, #EA5F00 139.34%);
-
+    font-family: monospace;
+    font-size: 25px;
+    color: #FFFFFF;
+    line-height: 40px;
+    margin-top: 1rem;
+    margin-left: 3rem;
+    font-weight: 300;
+}
+.subhead{
+    font-family: sail;
+    margin-right: 3rem;
+    margin-left: 3rem;
+    color: #FFFFFF;
+    font-weight: 100;
 }
 
-  .line1{
-    color:#000;
-    font-size:12px;
-
-  }
-   .line2{
-    color:#000;
-    font-size:12px;
-    
-  }
-   .line3{
-    color:#000;
-    font-size:12px;
-    
-  }
-
-  .cards{
-
-    transition: all 0.2s ease;
-    cursor: pointer;
-    background-color: #F7C115;
-
-  }
-    
-
-
-.cards:hover{
-
-    box-shadow: 5px 6px 6px 2px  linear-gradient(180deg, #F7C115 0%, #EA5F00 139.34%);
-    transform: scale(1.1);
+.logo{
+    display: flex;
+    margin-left: 3rem;
+    margin-top: 3rem; 
+      
+}
+.plogo{
+    font-size: 25px;
+    margin-left: 1rem;
+    color: #FFAA2B;
+} 
+image{
+    max-width: 40px;
+}
+.simpletext{
+    margin-left: 3.5rem;
+    margin-top: 2rem;
+    color: #ffffff;
+    font-weight: 100;
+}
+.search{
+    display: flex;
+    margin-left: 3.5rem;
+    margin-top: 2rem;
+    /* background: linear-gradient(94.74deg, #FFAA2B 10.1%, #A34301 159.47%); */
+    color: #FFFFFF;
+}
+.bar{
+    background: linear-gradient(94.74deg, #FFAA2B 10.1%, #A34301 159.47%);
+    border-radius: 40px;
+    width: 60vh;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    justify-content: space-evenly;
+    text-align: left;
+    color: white;
+}
+::placeholder{
+    color:#FFFFFF;
 }
 .chicken{
-    width: 100px;
-    height: 100px;
-    background-color: #F7C115;
+    justify-content: right;
 }
-.roasted{
-    width: 100px;
-    background-color: #F7C115;
+.plateimage{
+    position: absolute;
+    display: flex;
+    max-width: 450px;
+    margin-left: 39rem;
+    margin-top: 2%;
+    
 }
-
-
