--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+
 .text{
     text-align: center;
     position:relative ;
@@ -6,6 +13,7 @@
     
 }
 ol{
+    margin-top: auto;
     text-align: center;
     align-items: center;
     font-family: 'Times New Roman', Times, serif;
@@ -13,12 +21,7 @@ ol{
 }
 .heading{
     text-align: center;
-    padding-top: 5%;
 }
 h3{
     text-align: center;
-    color: aliceblue;
-}
-span{
-    color: rgb(158, 116, 37);
 }
