--- a/src/HomePage/RecommendedSection/Recmd.module.css
+++ b/src/HomePage/RecommendedSection/Recmd.module.css
@@ -70,7 +70,7 @@ image{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     justify-content: space-evenly;
     text-align: left;
-    color: white;
+    color: none;
 }
 ::placeholder{
     color:#FFFFFF;
