--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,47 +1,21 @@
-.nav{
-    position: relative;
-    width: 100%;
-    height: 100%;
 
-    
-    display: flex;
-    align-items: right;
-    font-weight: bold;
-    font-size: 120px;
-}
-.links-container{
-    display: flex;
-    width: 500px;
-    margin-left: 75vh;    
-}
-.links-container span{
-    font-weight: 500;
-    cursor: pointer;
-
-}
-.link{
-    justify-content: space-between;
-
-}
 .logo{
     position: relative;
-    text-decoration: none;
     display: flex;
     margin-left: 100px;
     font-weight: 700;
-    font-size: 180%;
-    margin-top: -3.5%;
-    
+    font-size: 190%;
+    margin-top: -52px;
+    margin-bottom: 12px;
+    margin-left: 120px;
 }
 .mainlogo{
-    position: relative;
     display: flex;
-    width: 3%;
+    width: 50px;
     margin-left: 40px;
-    margin-top: 9px;
-    height: 7vh;
-    
-    
+    margin-top: 12px;
+    margin-bottom: 12px;
+    height: 40px;
 }
 .menu{
     position: absolute;
@@ -50,5 +24,4 @@
     margin-left: 80vh;
     width: 50%;
     margin-top: -3%;
-    
 }
